fix: remove stepped story and styles update

--- a/packages/ibm-products-web-components/src/patterns/create-side-panel/create-side-panel.mdx
+++ b/packages/ibm-products-web-components/src/patterns/create-side-panel/create-side-panel.mdx
@@ -54,6 +54,9 @@ import '@carbon/web-components/es/components/text-input/index.js';
 <div>
   <cds-button @click=${this._openHandler}>Create partitions</cds-button>
   <c4p-side-panel
+    @c4p-side-panel-closed=${this._openHandler}
+    class="${blockClass}"
+    ?animate-title=${false}
     include-overlay
     ?open=${this.open}
     size="md"
@@ -62,21 +65,51 @@ import '@carbon/web-components/es/components/text-input/index.js';
     <div slot="subtitle">
       Specify the details of the partitions you're creating
     </div>
-    <h5>Core configuration</h5>
-    <p>We recommend you fill out and evaluate these details at a minimum before deploying your topic.</p>
-    <cds-form-input>
-      <cds-text-input value="Topic" label="Topic name"></cds-text-input>
-    </cds-form-input>
-    <cds-form-item>
-      <cds-number-input value="50" min="0" max="100" step="1" label="Partitions" size="md">
-      </cds-number-input>
-    </cds-form-item>
-    <cds-form-item>
-      <cds-number-input value="50" min="0" max="100" step="1" label="Replicas" size="md">
-      </cds-number-input>
-    </cds-form-item>
-    <cds-button slot="actions" kind="secondary" @click=${this._openHandler}>Cancel</cds-button>
-    <cds-button slot="actions" kind="primary" @click=${this._openHandler}>Create</cds-button>
+    <h3
+      class="${blockClass}__form-title-text ${blockClass}__content-text"
+    >
+      Core configuration
+    </h3>
+    <p class="${blockClass}__form-description-text ${blockClass}__content-text">
+      We recommend you fill out and evaluate these details at a minimum
+      before deploying your topic.
+    </p>
+    <cds-form id="example-form" class="${blockClass}__form">
+      <cds-form-item>
+        <cds-text-input value="Topic" label="Topic name"></cds-text-input>
+      </cds-form-item>
+      <cds-form-item>
+        <cds-number-input
+          value="50"
+          min="0"
+          max="100"
+          step="1"
+          label="Partitions"
+          size="md"
+        >
+        </cds-number-input>
+      </cds-form-item>
+      <cds-form-item>
+        <cds-number-input
+          value="50"
+          min="0"
+          max="100"
+          step="1"
+          label="Replicas"
+          size="md"
+        >
+        </cds-number-input>
+      </cds-form-item>
+    </cds-form>
+    <cds-button
+      slot="actions"
+      kind="secondary"
+      @click=${this._openHandler}
+      >Cancel</cds-button
+    >
+    <cds-button slot="actions" kind="primary" @click=${this._openHandler}
+      >Create</cds-button
+    >
   </c4p-side-panel>
 </div>
 ```
