chore: add deprecation notice to coachmark

--- a/packages/ibm-products/src/components/CoachmarkFixed/CoachmarkFixed.mdx
+++ b/packages/ibm-products/src/components/CoachmarkFixed/CoachmarkFixed.mdx
@@ -5,6 +5,14 @@ import * as CoachmarkFixedStories from './CoachmarkFixed.stories';
 
 # CoachmarkFixed
 
+## Deprecation notice
+
+This component is deprecated and will be removed in the next major version. This
+can be created as [pattern](/docs/patterns-coachmark-fixed--overview) using new
+[composable coachmark](/docs/preview-onboarding-coachmark-next--overview),
+[carousel utility](https://github.com/carbon-design-system/carbon/blob/main/packages/utilities/src/carousel/README.md)
+and other [carbon components](https://web-components.carbondesignsystem.com).
+
 ## Table of Contents
 
 - [Overview](#overview)
