--- a/packages/ibm-products/src/patterns/CoachmarkFixed/CoachmarkFixed.mdx
+++ b/packages/ibm-products/src/patterns/CoachmarkFixed/CoachmarkFixed.mdx
@@ -19,7 +19,7 @@ To build this pattern, we recommend including the following components:
 
 - [Coachmark](https://carbon-for-ibm-products.netlify.app/?path=/docs/experimental-onboarding-coachmark-next--overview)
 - [cds-button](https://web-components.carbondesignsystem.com/?path=/docs/components-button)
-- Carousel utility
+- [Carousel utility](https://github.com/carbon-design-system/carbon/blob/main/packages/utilities/src/carousel/README.md)
 
 ## Example usage
 
