--- a/packages/ibm-products/src/components/Coachmark/Coachmark.mdx
+++ b/packages/ibm-products/src/components/Coachmark/Coachmark.mdx
@@ -18,6 +18,12 @@ import * as CoachmarkStories from './Coachmark.stories';
 
 [Usage guidelines](https://pages.github.ibm.com/carbon/ibm-products/components/onboarding/coachmark/usage/)
 
+## Deprecation notice
+
+This component is deprecated and will be removed in the next major version.
+Please migrate to
+[composable Coachmark](/docs/preview-onboarding-coachmark-next--overview).
+
 ## Table of Contents
 
 - [Overview](#overview)
