chore: remove next from storybook

--- a/packages/ibm-products/src/components/Coachmark/Coachmark.mdx
+++ b/packages/ibm-products/src/components/Coachmark/Coachmark.mdx
@@ -22,7 +22,7 @@ import * as CoachmarkStories from './Coachmark.stories';
 
 This component is deprecated and will be removed in the next major version.
 Please migrate to
-[composable Coachmark](/docs/preview-onboarding-coachmark-next--overview).
+[composable Coachmark](https://carbon-for-ibm-products.netlify.app/?path=/docs/preview-onboarding-coachmark--overview).
 
 ## Table of Contents
 
