--- a/packages/ibm-products/src/components/CoachmarkStack/CoachmarkStack.mdx
+++ b/packages/ibm-products/src/components/CoachmarkStack/CoachmarkStack.mdx
@@ -8,8 +8,10 @@ import * as CoachmarkStackStories from './CoachmarkStack.stories';
 ## Deprecation notice
 
 This component is deprecated and will be removed in the next major version. This
-can be created as [pattern](/docs/patterns-coachmark-stacked--overview) using
-new [composable coachmark](/docs/preview-onboarding-coachmark-next--overview),
+can be created as
+[pattern](https://carbon-for-ibm-products.netlify.app/?path=/docs/patterns-coachmark-stacked--overview)
+using new
+[composable coachmark](https://carbon-for-ibm-products.netlify.app/?path=/docs/preview-onboarding-coachmark--overview),
 [carousel utility](https://github.com/carbon-design-system/carbon/blob/main/packages/utilities/src/carousel/README.md)
 and other [carbon components](https://web-components.carbondesignsystem.com).
 
