chore(coachmark): deprecation notice

--- a/packages/ibm-products/src/components/Coachmark/Coachmark.mdx
+++ b/packages/ibm-products/src/components/Coachmark/Coachmark.mdx
@@ -90,7 +90,7 @@ to display properly within your usage.
 ## Floating example usage
 
 <Canvas className="coachmarkExample" withSource="none">
-  <div className="CoachmarkBaseExampleUsage">
+  <div className="CoachmarkBaseExampleUsage coachmark_annotation">
     <Story of={CoachmarkStories.floating} />
   </div>
 </Canvas>
