--- a/packages/ibm-products/src/components/CoachmarkFixed/CoachmarkFixed.mdx
+++ b/packages/ibm-products/src/components/CoachmarkFixed/CoachmarkFixed.mdx
@@ -13,7 +13,7 @@ can be created as
 using new
 [composable coachmark](https://carbon-for-ibm-products.netlify.app/?path=/docs/preview-onboarding-coachmark--overview),
 [carousel utility](https://github.com/carbon-design-system/carbon/blob/main/packages/utilities/src/carousel/README.md)
-and other [carbon components](https://web-components.carbondesignsystem.com).
+and other [carbon components](https://react.carbondesignsystem.com).
 
 ## Table of Contents
 
