--- a/packages/ibm-products/src/patterns/CoachmarkOverlayElements/CoachmarkOverlayElements.mdx
+++ b/packages/ibm-products/src/patterns/CoachmarkOverlayElements/CoachmarkOverlayElements.mdx
@@ -18,7 +18,7 @@ and should only be used within the scope of a Coachmark.
 To build this pattern, we recommend including the following components:
 
 - [Coachmark](https://carbon-for-ibm-products.netlify.app/?path=/docs/preview-onboarding-coachmark--overview)
-- [cds-button](https://react.carbondesignsystem.com/?path=/docs/components-button)
+- [Button](https://react.carbondesignsystem.com/?path=/docs/components-button)
 - [Carousel utility](https://github.com/carbon-design-system/carbon/blob/main/packages/utilities/src/carousel/README.md)
 
 ## About Onboarding
