chore(createModal): make corrections in the MDX file

--- a/packages/ibm-products/src/patterns/CreateModal/CreateModal.mdx
+++ b/packages/ibm-products/src/patterns/CreateModal/CreateModal.mdx
@@ -22,11 +22,10 @@ export const customFunctionArr = [wait];
   - [From validation](#form-validation)
   - [Overriding Carbon theme](#override-carbon-theme)
   - [Create Modal with form validation](#create-modal-with-form-validation)
-- [Component API](#component-api)
 
 ## Overview
 
-The `CreateModal` component provides a way for a user to quickly generate a new
+The `CreateModal` pattern provides a way for a user to quickly generate a new
 resource. It is triggered by a user’s action, appears on top of the main page
 content, and is persistent until dismissed. The purpose of this modal should be
 immediately apparent to the user, with a clear and obvious path to completion.
@@ -35,9 +34,12 @@ To build this pattern, we recommend including the following ingredients:
 
 - [ComposedModal](https://react.carbondesignsystem.com/?path=/docs/components-composedmodal)
 - [Button](https://react.carbondesignsystem.com/?path=/docs/components-button)
+- [Form](https://react.carbondesignsystem.com/?path=/docs/components-form)
 - [FormGroup](https://react.carbondesignsystem.com/?path=/docs/components-formgroup)
 - [TextInput](https://react.carbondesignsystem.com/?path=/docs/components-textinput)
+- [TextArea](https://react.carbondesignsystem.com/?path=/docs/components-textarea)
 - [RadioButton](https://react.carbondesignsystem.com/?path=/docs/components-radiobutton)
+- [DropDown](https://react.carbondesignsystem.com/?path=/docs/components-dropdown)
 - [Loading](https://react.carbondesignsystem.com/?path=/docs/components-loading)
 
 ### Example usage
