--- a/packages/ibm-products-web-components/src/patterns/create-modal/create-modal.mdx
+++ b/packages/ibm-products-web-components/src/patterns/create-modal/create-modal.mdx
@@ -10,7 +10,7 @@ import * as createModalStories from './create-modal.stories';
 |
 [Carbon modal usage guidelines](https://www.carbondesignsystem.com/components/modal/usage)
 |
-[Carbon modal documentation](https://react.carbondesignsystem.com/?path=/docs/components-modal)
+[Carbon modal documentation](https://web-components.carbondesignsystem.com/?path=/docs/components-modal)
 
 ## Table of Contents
 
@@ -31,6 +31,7 @@ immediately apparent to the user, with a clear and obvious path to completion.
 To build this pattern, we recommend including the following ingredients:
 
 - [cds-modal](https://web-components.carbondesignsystem.com/?path=/docs/components-modal)
+- [cds-form](https://web-components.carbondesignsystem.com/?path=/docs/components-form)
 - [cds-form-group](https://web-components.carbondesignsystem.com/?path=/docs/components-form-group)
 - [cds-text-input](https://web-components.carbondesignsystem.com/?path=/docs/components-text-input)
 - [cds-radio-button](https://web-components.carbondesignsystem.com/?path=/docs/components-radio-button)
@@ -41,38 +42,22 @@ To build this pattern, we recommend including the following ingredients:
 
 ### Example usage
 
-### Create Modal
+### Coded examples
 
-{/* The export pattern is used for exporting resources to the system.
-
-Patterns have multiple ways of accomplishing a user need and typically use a
-combination of components with additional design considerations. The pattern
-code we share is meant to serve as an example implementation that can be built
-and extended further.
-
-To build this pattern, we recommend including the following components:
-
-- [cds-modal](https://web-components.carbondesignsystem.com/?path=/docs/components-modal)
-- [cds-form-group](https://web-components.carbondesignsystem.com/?path=/docs/components-form-group)
-- [cds-text-input](https://web-components.carbondesignsystem.com/?path=/docs/components-text-input)
-- [cds-radio-button](https://web-components.carbondesignsystem.com/?path=/docs/components-radio-button)
-- [cds-loading](https://web-components.carbondesignsystem.com/?path=/docs/components-loading)
-
-These components are used within the `standard-export-modal` and
-`export-modal-preformatted-extension` wrapper components to handle state
-management.
+Coded examples can be edited and are a great way to try out a component.
 
 > 💡 Check our
-> [Stackblitz](https://stackblitz.com/github/carbon-design-system/ibm-products/tree/main/packages/ibm-products-web-components/examples/export-modal)
+> [Stackblitz](https://stackblitz.com/github/carbon-design-system/ibm-products/tree/main/packages/ibm-products-web-components/examples/create-modal)
 > example implementation.
 
-[![Edit carbon-web-components](https://developer.stackblitz.com/img/open_in_stackblitz.svg)](https://stackblitz.com/github/carbon-design-system/ibm-products/tree/main/packages/ibm-products-web-components/examples/export-modal)
+[![Edit carbon-web-components](https://developer.stackblitz.com/img/open_in_stackblitz.svg)](https://stackblitz.com/github/carbon-design-system/ibm-products/tree/main/packages/ibm-products-web-components/examples/create-modal)
 
 ## Basic implementation
 
-When a file’s name can be edited before exporting, a dialog containing an
-editable textbox should be presented to the user. The textbox should be
-pre-populated with the file’s default name.
+The create modal provides a simple form for users to create a new resource. The
+modal should include a title, optional subtitle for context (such as step
+indicators), and description text to guide the user through the creation
+process.
 
 ### Getting started
 
@@ -83,144 +68,124 @@ Here's a quick example to get you started.
 ```javascript
 import '@carbon/web-components/es/components/modal/index.js';
 import '@carbon/web-components/es/components/button/index';
-import '@carbon/web-components/es/components/form-group/index';
 import '@carbon/web-components/es/components/text-input/index';
-import CheckmarkFilled16 from '@carbon/icons/es/checkmark--filled/16';
-import ErrorFilled16 from '@carbon/icons/es/error--filled/16';
-import '@carbon/web-components/es/components/loading/index';
+import '@carbon/web-components/es/components/dropdown/index';
+import '@carbon/web-components/es/components/textarea/index';
+import '@carbon/web-components/es/components/stack/index';
 ```
 
 ### HTML
 
 ```html
-<cds-modal>
-  <cds-modal-close-button @click="${onCloseHandler()}"></cds-modal-close-button>
-  <cds-modal-header>
-    <cds-modal-heading>Export</cds-modal-heading>
+<cds-modal class="c4p--create-modal" size="sm" prevent-close-on-click-outside>
+  <cds-modal-close-button></cds-modal-close-button>
+  
+  <cds-modal-header class="c4p--create-modal__heading">
+    <cds-modal-heading>Title</cds-modal-heading>
+    <p class="c4p--create-modal__subtitle">Your subtitle text will appear here</p>
   </cds-modal-header>
-  <cds-modal-body>
-    ${!submitted ? html` ${this.validExtensions.length > 0 ? html `
-    <p>File must be exported in a PDF format</p>
-    `: null}
-    <div>
+
+  <cds-modal-body has-form>
+    <p class="c4p--create-modal__description">
+      This is example description text that will appear here in your modal
+    </p>
+    <cds-stack gap="4">
       <cds-text-input
-        placeholder="URL"
-        label="File name"
-        id="test-id"
-        .value="${this.filename}"
-        @input="${inputHandler}"
-        @blur="${handleBlur}"
-        ?disabled
-        .invalid="${this.validExtensions? this.hasInvalidExtension(): false}"
-        invalid-text="${this.validExtensions.length > 0 ? 'File must have valid extension .pdf': null}"
+        label="Text input label"
+        helper-text="Helper text goes here"
+        placeholder="Placeholder"
       ></cds-text-input>
-    </div>
-    ` : null}
-    <div aria-live="polite">
-      ${this.loading ? html`<cds-loading
-        aria-live="off"
-        description=""
-        small
-        .withOverlay="${false}"
-      ></cds-loading>
-      <p>Exporting file...</p>
-      `: null} ${this.successful ? html` ${iconLoader(CheckmarkFilled16, {slot: 'icon',})}
-      <p>The file has been exported.</p>
-      `: null} ${this.error ? html` ${iconLoader(ErrorFilled16, {slot: 'icon',})}
-      <p>Server error 500</p>
-      `: null}
-    </div>
+
+      <cds-dropdown
+        title-text="Dropdown label"
+        helper-text="This is some helper text"
+        label="Dropdown menu options"
+      >
+        <cds-dropdown-item value="option-0">Option 0</cds-dropdown-item>
+        <cds-dropdown-item value="option-1">Option 1</cds-dropdown-item>
+        <cds-dropdown-item value="option-2">Option 2</cds-dropdown-item>
+      </cds-dropdown>
+
+      <cds-textarea
+        label="Text area label"
+        helper-text="Optional helper text"
+        placeholder="Placeholder text"
+      ></cds-textarea>
+    </cds-stack>
   </cds-modal-body>
-  ${!submitted ? html`
+
   <cds-modal-footer>
-    <cds-modal-footer-button
-      kind="secondary"
-      data-modal-close
-      @click="${onCloseHandler();}"
-      >Cancel</cds-modal-footer-button
-    >
-    <cds-modal-footer-button
-      ?disabled="${checkDisabled()}"
-      @click="${submitHandler();}"
-      >Export</cds-modal-footer-button
-    > </cds-modal-footer
-  >`:null}
+    <cds-modal-footer-button kind="secondary" data-modal-close>
+      Cancel
+    </cds-modal-footer-button>
+    <cds-modal-footer-button kind="primary">
+      Create
+    </cds-modal-footer-button>
+  </cds-modal-footer>
 </cds-modal>
 ```
 
-## With Extension
+## Form validation
 
-Similar as standard Export Modal with valid Extension property.
-
-## With Preformatted Extension
-
-When a file can be exported in 2-5 different formats, these can be presented in
-a radio button selection. Where possible, provide guidance about which format a
-user might want to choose, and set a sensible default.
+When implementing form validation, use the invalid state on form inputs to
+provide feedback to users. Required fields should be clearly marked and
+validated on blur or submit.
 
 ### Getting started
 
-Here's a quick example to get you started.
+Here's an example with form validation.
 
 ### HTML
 
 ```html
-<cds-modal>
-  <cds-modal-close-button @click="${onCloseHandler()}"></cds-modal-close-button>
-  <cds-modal-header>
-    <cds-modal-heading>Export</cds-modal-heading>
+<cds-modal class="c4p--create-modal" size="sm" prevent-close-on-click-outside>
+  <cds-modal-close-button></cds-modal-close-button>
+  
+  <cds-modal-header class="c4p--create-modal__heading">
+    <cds-modal-heading>Title</cds-modal-heading>
+    <p class="c4p--create-modal__subtitle">Your subtitle text will appear here</p>
   </cds-modal-header>
-  <cds-modal-body>
-    ${!submitted ? html` ${this.validExtensions.length > 0 ? html `
-    <p>File must be exported in a PDF format</p>
-    `: null}
-    <div>
-      <cds-form-group legend-text="Choose an export format">
-        ${this.preformattedExtension.length ? html `<cds-radio-button-group
-          name="extensions"
-          @input="${extensionChangeHandler}"
-          value="${this.extension}"
-          orientation="vertical"
-        >
-          ${this.preformattedExtension.map(o) => html`
-          <cds-radio-button
-            label-text="${`${o.extension} (${o.description})`}"
-            value="${o.extension}"
-            id="${o.extension}"
-          ></cds-radio-button
-          >`} </cds-radio-button-group
-        >` : null}
-      </cds-form-group>
-    </div>
-    ` : null}
-    <div aria-live="polite">
-      ${this.loading ? html`<cds-loading
-        aria-live="off"
-        description=""
-        small
-        .withOverlay="${false}"
-      ></cds-loading>
-      <p>Exporting file...</p>
-      `: null} ${this.successful ? html` ${iconLoader(CheckmarkFilled16, {slot: 'icon',})}
-      <p>The file has been exported.</p>
-      `: null} ${this.error ? html` ${iconLoader(ErrorFilled16, {slot: 'icon',})}
-      <p>Server error 500</p>
-      `: null}
-    </div>
+
+  <cds-modal-body has-form>
+    <p class="c4p--create-modal__description">
+      This is example description text that will appear here in your modal
+    </p>
+    <cds-stack gap="4">
+      <cds-text-input
+        label="Text input label"
+        placeholder="Placeholder"
+        invalid
+        invalid-text="This is a required field"
+      ></cds-text-input>
+
+      <cds-text-input
+        label="Text input label (optional)"
+        placeholder="Placeholder"
+      ></cds-text-input>
+
+      <cds-text-input
+        label="Text input label (optional)"
+        placeholder="Placeholder"
+      ></cds-text-input>
+
+      <cds-radio-button-group
+        legend-text="Radio button legend text goes here"
+        name="radio-button-group"
+      >
+        <cds-radio-button label-text="Radio-1" value="radio-1"></cds-radio-button>
+        <cds-radio-button label-text="Radio-2" value="radio-2"></cds-radio-button>
+        <cds-radio-button label-text="Radio-3" value="radio-3"></cds-radio-button>
+      </cds-radio-button-group>
+    </cds-stack>
   </cds-modal-body>
-  ${!submitted ? html`<cds-modal-footer>
-    <cds-modal-footer-button
-      kind="secondary"
-      data-modal-close
-      @click="${onCloseHandler()}"
-      >Cancel</cds-modal-footer-button
-    >
-    <cds-modal-footer-button
-      ?disabled="${!this.filename || this.loading}"
-      @click="${this.submitHandler()}"
-      >Export</cds-modal-footer-button
-    >
+
+  <cds-modal-footer>
+    <cds-modal-footer-button kind="secondary" data-modal-close>
+      Cancel
+    </cds-modal-footer-button>
+    <cds-modal-footer-button kind="primary" disabled>
+      Create
+    </cds-modal-footer-button>
   </cds-modal-footer>
-  ` : null}
 </cds-modal>
-``` */}
+```
