feat(tearsheet): implement feature flag enablePresence

--- a/packages/ibm-products/src/components/FeatureFlags/FeatureFlags.mdx
+++ b/packages/ibm-products/src/components/FeatureFlags/FeatureFlags.mdx
@@ -13,12 +13,13 @@ Below is a list of the current feature flags existing within
 `@carbon/ibm-products`. As the library continues to grow and evolve, any future
 feature flags will be updated within this table.
 
-| Flag                                  | Description                                                | Default |
-| ------------------------------------- | ---------------------------------------------------------- | ------- |
-| `default-portal-target-body`          | Enable the default portal target to be the document's body | `true`  |
-| `enable-datagrid-useInlineEdit`       | Enable the Datagrid `useInlineEdit` extension              | `false` |
-| `enable-datagrid-useEditableCell`     | Enable the Datagrid `useEditableCell` extension            | `false` |
-| `enable-datagrid-useCustomizeColumns` | Enable the Datagrid `useCustomizeColumns` extension        | `false` |
+| Flag                                  | Description                                                                          | Default |
+| ------------------------------------- | ------------------------------------------------------------------------------------ | ------- |
+| `default-portal-target-body`          | Enable the default portal target to be the document's body                           | `true`  |
+| `enable-datagrid-useInlineEdit`       | Enable the Datagrid `useInlineEdit` extension                                        | `false` |
+| `enable-datagrid-useEditableCell`     | Enable the Datagrid `useEditableCell` extension                                      | `false` |
+| `enable-datagrid-useCustomizeColumns` | Enable the Datagrid `useCustomizeColumns` extension                                  | `false` |
+| `enable-presence`                     | Remove Tearsheet from DOM after closing rather than hiding it (preserves animations) | `false` |
 
 ## Turning on feature flags in Javascript/react
 
