--- a/packages/ibm-products-web-components/src/components/user-avatar/user-avatar.mdx
+++ b/packages/ibm-products-web-components/src/components/user-avatar/user-avatar.mdx
@@ -1,6 +1,7 @@
-import { ArgTypes, Markdown, Meta } from '@storybook/addon-docs/blocks';
+import { ArgTypes, Markdown, Meta, Canvas } from '@storybook/addon-docs/blocks';
 import { cdnJs, cdnCss } from '../../globals/internal/storybook-cdn';
 import * as UserAvatarStories from './user-avatar.stories';
+import { stackblitzPrefillConfig } from '../../../previewer/codePreviewer';
 
 <Meta of={UserAvatarStories} />
 
@@ -43,6 +44,20 @@ import '@carbon/ibm-products-web-components/es/components/user-avatar/index.js';
   tooltip-alignment="right"
 ></c4p-user-avatar>
 ```
+
+### Example Usage
+<Canvas
+  of={UserAvatarStories.Default}
+  additionalActions={[
+    {
+      title: 'Open in Stackblitz',
+      onClick: () =>
+        stackblitzPrefillConfig({
+          story: UserAvatarStories.Default,
+        }),
+    },
+  ]}
+></Canvas>
 
 ### With Icon
 
