fix(bignumber): story docs, skeleton story and review comments

--- a/packages/ibm-products-web-components/src/components/big-number/big-number.mdx
+++ b/packages/ibm-products-web-components/src/components/big-number/big-number.mdx
@@ -44,9 +44,11 @@ import '@carbon/ibm-products-web-components/es/components/big-number/index.js';
 
 <Canvas className="page-header--docs-demo" of={BigNumberStories.Default} />
 
+### HTML
+
 ```html
     <c4p-big-number
-        .fractionDigits=${fractionDigits}
+        fraction-digits=${fractionDigits}
         label=${label}
         .value=${value}
         .total=${total}
@@ -62,9 +64,11 @@ import '@carbon/ibm-products-web-components/es/components/big-number/index.js';
 
 <Canvas className="page-header--docs-demo" of={BigNumberStories.WithCustomIcons} />
 
+### HTML
+
 ```html
 <c4p-big-number
-    .fractionDigits=${fractionDigits}
+    fraction-digits=${fractionDigits}
     label=${label}
     .value=${value}
     .total=${total}
